--- a/chart/index.html
+++ b/chart/index.html
@@ -7,11 +7,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.min.js"></script>
   </head>
-
+  
   <body>
-    <div style="width:100%;">
+    <div id="container" style="width:100%;">
       <canvas id="chart"></canvas>
     </div>
+    
     <script src="script.js"></script>
   </body>
 
