--- a/index.html
+++ b/index.html
@@ -1,25 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Momentum App</title>
-</head>
-<body>
-    <form class="hidden" id="login-form">
-        <input 
-            required
-            maxlength = "15"
-            type="text" 
-            placeholder="What is your name?"
-        />
-        <input type="submit" value = "Log In">
-    </form>
-    <h2 id="clock">00:00:00</h2>
-    <h1 id="greeting" class="hidden"></h1>
-    <script src="js/greeting.js"></script>
-    <script src="js/clock.js"></script>
-</body>
+<html>
+  <meta charset="UTF-8">
+  <head>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.bundle.min.js"></script>
+  </head>
+  
+  <body>
+    <div id="container" style="width:100%;">
+      <canvas id="chart"></canvas>
+    </div>
+    
+    <script src="script.js"></script>
+  </body>
+
 </html>
